[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art_assets/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://Human.gd" type="Script" id=2]
[ext_resource path="res://HumanSay.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 428, 133, 27, 42 )

[sub_resource type="CircleShape2D" id=2]
radius = 22.5678

[sub_resource type="Animation" id=3]
resource_name = "fade"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node/HumanSay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "start_anim"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node/HumanSay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Human" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 6.28319
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start_anim"
anims/fade = SubResource( 3 )
anims/start_anim = SubResource( 4 )

[node name="Node" type="Node" parent="."]

[node name="HumanSay" parent="Node" instance=ExtResource( 3 )]
visible = false
margin_left = -23.3345
margin_top = -50.9117
margin_right = 60.6655
margin_bottom = -25.9117
text = "Thanks!"
[connection signal="body_entered" from="." to="." method="_on_Human_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
